--- a/client/public/index.html
+++ b/client/public/index.html
@@ -73,7 +73,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- <title>HRMS by Mantzaris Vasilis</title> -->
-    <title>HR Mangement System</title>
+    <title>HR Management System</title>
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
     <noscript>You need to enable JavaScript to run this app.</noscript>
